Overall styles fixes

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
             <h2 class="section-header-title">Projects</h2>
             <nav class="section-header-nav">
                 <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Projects</button><button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button><button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button><button class="article-header__nav__button" onClick="scrollToElement('#about')">About</button><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
+                <br/><a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
             </nav>
         </header>
 
@@ -920,6 +921,7 @@
             <h2 class="section-header-title">Skills</h2>
             <nav class="section-header-nav">
                 <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Projects</button><button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button><button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button><button class="article-header__nav__button" onClick="scrollToElement('#about')">About</button><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
+                <br/><a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
             </nav>
         </header>
         <div class="article-body">
@@ -1019,6 +1021,7 @@
             <h2 class="section-header-title">Experience</h2>
             <nav class="section-header-nav">
                 <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Projects</button><button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button><button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button><button class="article-header__nav__button" onClick="scrollToElement('#about')">About</button><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
+                <br/><a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
             </nav>
         </header>
         <article class="article-body">
@@ -1161,7 +1164,7 @@
                                 <div class="reference-wrapper">
                                     <p class="reference-content">
                                         <img src="/img/experience/quotes-open.svg" class="quote-open">
-                                        Pavel has an very deep understanding of modern IT technologies, in primis JavaScript, HTML5, CSS3, Single-page Web Application, Object-oriented programming. Besides, he has a great aesthetic taste, which complements his technical skills as a frontend developer.”
+                                        Pavel has a very deep understanding of modern IT technologies, in primis JavaScript, HTML5, CSS3, Single-page Web Application, Object-oriented programming. Besides, he has a great aesthetic taste, which complements his technical skills as a frontend developer.”
                                     </p>
                                     <div class="reference-author">Giuseppe Sisto</div>
                                     <div class="reference-author-title">R&D Senior Researcher at Telecom Italia</div>
@@ -1189,7 +1192,7 @@
                                 <div class="reference-wrapper">
                                     <p class="reference-content">
                                         <img src="/img/experience/quotes-open.svg" class="quote-open">
-                                        I also want to mention Pavel's attention to details and his patience to achieve pixel perfection when building the page. Finally we all really enjoyed his friendly and cheerful personality, Pavel brings a lot to the table and I would highly recommend him.”
+                                        Pavel is a brilliant frontend developer, who worked in the team I was managing on the foodora project. I want to mention his attention to details and his patience to achieve pixel perfection when building the page. Finally we all really enjoyed his friendly and cheerful personality, Pavel brings a lot to the table and I would highly recommend him.”
                                     </p>
                                     <div class="reference-author">Joe Gemayel</div>
                                     <div class="reference-author-title">Director of Product at Rocket Internet SE</div>
@@ -1279,7 +1282,7 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-            <a class="references-linkedin-link" href="https://www.linkedin.com/in/frontenddeveloperlondon" target="_blank">Read complete references on LinkedIn</a>
+            <a class="references-linkedin-link" href="https://www.linkedin.com/in/frontenddeveloperlondon#recommendations" target="_blank">Read full references on my LinkedIn profile</a>
         </article>
 
     </section>
@@ -1294,6 +1297,7 @@
             <h2 class="section-header-title">About me</h2>
             <nav class="section-header-nav">
                 <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Projects</button><button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button><button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button><button class="article-header__nav__button" onClick="scrollToElement('#about')">About</button><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
+                <br/><a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
             </nav>
         </header>
         <article class="article-body">
@@ -1303,14 +1307,13 @@
                 </figure>
                 <h3 class="about-interest-title-main">Hi, nice to meet you!</h3>
                 <p>
-                    My name is Pavel,<br/>
-                    I'm a London based web developer and life enthusiast :D<br/>
-                    I'm kind of a nomad, was born in 1981 in the cold Siberia region in Soviet Union, <br/>
+                    I'm Pavel, a London based web developer and life enthusiast :D<br/>
+                    I'm kind of a nomad, I was born in the cold Siberia region in Soviet Union, <br/>
                     later on moved to the warm shores of Italy, <br/>
-                    than spent some time in Germany and now I'm getting wet in the UK. <br/>
-                    Besides coding and being super nerd I also love to do a buch of other stuff, give a look!</p>
+                    than cooled myself for some time in Germany and now I'm getting all wet in the UK. <br/>
+                    Besides coding and being super nerd I also love to do a bunch of other stuff.</p>
             </div>
-            <h3 class="about-interest-title-main">Besides coding, I also like:</h3>
+            <h3 class="about-interest-title-main">My hobbies</h3>
             <div class="about-interest">
                 <figure class="about-interest-image">
                     <img class="me" src="/img/about-salsa.png">
@@ -1342,7 +1345,6 @@
                     <p>
                         Started as an experiment, turned into a hobby, photography even became my secondary profession for two years, when, besides coding, I worked on several photo projects. I tried myself with reportage, sports and dancing photography, having a lot of fun with all of them. Now I photograph only for fun, occasionally using my photo retouching skills on web projects. <br/>
                         My photos:
-                        <br/>
                         <button class="interest-button">Boxing</button>
                         <button class="interest-button">Salsa</button>
                         <button class="interest-button">Buddhist monks</button>
@@ -1405,19 +1407,19 @@
             <h2 class="section-header-title">Contact</h2>
             <nav class="section-header-nav">
                 <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Projects</button><button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button><button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button><button class="article-header__nav__button" onClick="scrollToElement('#about')">About</button><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
+                <br/><a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
             </nav>
         </header>
         <div class="article-body">
             <h3 class="contact-title">May I help you?</h3>
             <p>
-                I'm a Senior Front-end Developer based in London, UK.
                 <br/>I would be happy to design and build your next, amazing web project.
-                <br/>My next availability is April 2016.
+                <br/>I'm currently available for hire.
             </p>
             <h3 class="contact-title">Contact me</h3>
             <div class="contact-methods">
                 <a class="contact-method" href="mailto:pavel@maximov.it" target="_blank">pavel@maximov.it</a>
-                <a class="contact-method" href="tel:00393482449123" target="_blank">+39 348 2449 123</a>
+                <a class="contact-method" href="tel:00447887664218" target="_blank">+44 7887 66 4218</a>
                 <a class="contact-method" href="https://de.linkedin.com/in/frontendlondon" target="_blank">LinkedIn</a>
             </div>
         </div>
@@ -1432,6 +1434,7 @@
             <span class="section-header-secondary-title">Hope to hear from you soon.</span>
             <nav class="section-header-nav">
                 <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Projects</button><button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button><button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button><button class="article-header__nav__button" onClick="scrollToElement('#about')">About</button><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
+                <br/><a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
             </nav>
         </header>
         <video class="article-video" height="100%" width="100%" autoplay loop>
