Added scroll teaser

--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
                         </div>
                         <div class="portfolio-item-notebook">
                             <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
-                            <div class="portfolio-item-img-full-wrapper carousel slide" id="bk-main-carousel" >
+                            <div class="portfolio-item-img-full-wrapper carousel main-carousel slide" id="bk-main-carousel" >
                                     <ol class="carousel-indicators">
                                         <li data-target="#bk-main-carousel" data-slide-to="0" class="active"></li>
                                         <li data-target="#bk-main-carousel" data-slide-to="1"></li>
@@ -141,7 +141,7 @@
                         </div>
                         <figure class="portfolio-item-mobile">
                             <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
-                            <div class="portfolio-item-img-full-wrapper carousel slide" id="bk-secondary-carousel" >
+                            <div class="portfolio-item-img-full-wrapper carousel secondary-carousel slide" id="bk-secondary-carousel" >
                                 <div class="carousel-inner" role="listbox">
                                     <div class="carousel-item active tse-scrollable wrapper">
                                         <div class="tse-content">
@@ -222,7 +222,7 @@
                         </div>
                         <div class="portfolio-item-notebook">
                             <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
-                            <div class="portfolio-item-img-full-wrapper carousel slide" id="vendomo-main-carousel" >
+                            <div class="portfolio-item-img-full-wrapper carousel main-carousel slide" id="vendomo-main-carousel" >
 
                                 <ol class="carousel-indicators">
                                     <li data-target="#vendomo-main-carousel" data-slide-to="0" class="active"></li>
@@ -252,7 +252,7 @@
                         </div>
                         <figure class="portfolio-item-mobile">
                             <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
-                            <div class="portfolio-item-img-full-wrapper carousel slide" id="vendomo-secondary-carousel" >
+                            <div class="portfolio-item-img-full-wrapper carousel secondary-carousel slide" id="vendomo-secondary-carousel" >
                                 <div class="carousel-inner" role="listbox">
                                     <div class="carousel-item active tse-scrollable wrapper">
                                         <div class="tse-content">
@@ -323,7 +323,7 @@
                         </div>
                         <div class="portfolio-item-notebook">
                             <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
-                            <div class="portfolio-item-img-full-wrapper carousel slide" id="vendomo-crm-main-carousel" >
+                            <div class="portfolio-item-img-full-wrapper carousel main-carousel slide" id="vendomo-crm-main-carousel" >
 
                                 <ol class="carousel-indicators">
                                     <li data-target="#vendomo-crm-main-carousel" data-slide-to="0" class="active"></li>
@@ -365,7 +365,7 @@
                         </div>
                         <figure class="portfolio-item-mobile">
                             <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
-                            <div class="portfolio-item-img-full-wrapper carousel slide" id="vendomo-crm-secondary-carousel" >
+                            <div class="portfolio-item-img-full-wrapper carousel secondary-carousel slide" id="vendomo-crm-secondary-carousel" >
                                 <div class="carousel-inner" role="listbox">
                                     <div class="carousel-item active tse-scrollable wrapper">
                                         <div class="tse-content">
@@ -446,7 +446,7 @@
                         </div>
                         <div class="portfolio-item-notebook">
                             <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
-                            <div class="portfolio-item-img-full-wrapper carousel slide" id="foodora-main-carousel" >
+                            <div class="portfolio-item-img-full-wrapper carousel main-carousel slide" id="foodora-main-carousel" >
 
                                 <ol class="carousel-indicators">
                                     <li data-target="#foodora-main-carousel" data-slide-to="0" class="active"></li>
@@ -488,7 +488,7 @@
                         </div>
                         <figure class="portfolio-item-mobile">
                             <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
-                            <div class="portfolio-item-img-full-wrapper carousel slide" id="foodora-secondary-carousel" >
+                            <div class="portfolio-item-img-full-wrapper carousel secondary-carousel slide" id="foodora-secondary-carousel" >
                                 <div class="carousel-inner" role="listbox">
                                     <div class="carousel-item active tse-scrollable wrapper">
                                         <div class="tse-content">
@@ -555,7 +555,7 @@
                         </div>
                         <div class="portfolio-item-samsung-tv">
                             <img class="portfolio-item-device-img" src="/img/portfolio/samsung-tv.png">
-                            <div class="portfolio-item-img-full-wrapper carousel slide" id="timvision-main-carousel" >
+                            <div class="portfolio-item-img-full-wrapper carousel main-carousel slide" id="timvision-main-carousel" >
 
                                 <ol class="carousel-indicators">
                                     <li data-target="#timvision-main-carousel" data-slide-to="0" class="active"></li>
@@ -637,7 +637,7 @@
                         </div>
                         <div class="portfolio-item-samsung-tv">
                             <img class="portfolio-item-device-img" src="/img/portfolio/samsung-tv.png">
-                            <div class="portfolio-item-img-full-wrapper carousel slide" id="cubomusica-main-carousel" >
+                            <div class="portfolio-item-img-full-wrapper carousel secondary-carousel slide" id="cubomusica-main-carousel" >
 
                                 <ol class="carousel-indicators">
                                     <li data-target="#cubomusica-main-carousel" data-slide-to="0" class="active"></li>
@@ -731,7 +731,7 @@
                         </div>
                         <div class="portfolio-item-notebook">
                             <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
-                            <div class="portfolio-item-img-full-wrapper carousel slide" id="unicri-main-carousel" >
+                            <div class="portfolio-item-img-full-wrapper carousel main-carousel slide" id="unicri-main-carousel" >
 
                                 <ol class="carousel-indicators">
                                     <li data-target="#unicri-main-carousel" data-slide-to="0" class="active"></li>
@@ -853,12 +853,12 @@
                         <div class="portfolio-item-modal-details-wrapper">
                             <h3 class="portfolio-item-title">Everything else</h3>
                             <h4 class="portfolio-item-subtitle">Websites for various clients</h4>
-                            <p class="portfolio-item-content-details">As Freelance Front-end Developer I consulted various web agencies and clients, creating several static and dynamic websites. In most cases I did both designs and HTML/CSS layout and in some cases I also set up and customised the CMS (Wordpress).</p>
+                            <p class="portfolio-item-content-details">As Freelance Front-end Developer I consulted various web agencies and clients, creating numerous static and dynamic websites. In most cases I did both designs and HTML/CSS layout and in some cases I also set up and customised the CMS (Wordpress). Only few of them are shown here.</p>
                             <p class="portfolio-item-content-details">Technologies: HTML, CSS, SASS, JavaScript, jQuery, Wordpress, Grunt, UX/UI Design, Photoshop.</p>
                         </div>
                         <div class="portfolio-item-notebook">
                             <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
-                            <div class="portfolio-item-img-full-wrapper carousel slide" id="others-main-carousel" >
+                            <div class="portfolio-item-img-full-wrapper carousel main-carousel slide" id="others-main-carousel" >
 
                                 <ol class="carousel-indicators">
                                     <li data-target="#others-main-carousel" data-slide-to="0" class="active"></li>
@@ -1121,7 +1121,7 @@
         <article class="article-body">
             <h2 class="references-title">References</h2>
             <div class="references-content">
-                <div class="carousel slide" id="references-main-carousel" >
+                <div class="carousel main-carousel slide" id="references-main-carousel" >
                     <ol class="carousel-indicators">
                         <li data-target="#references-main-carousel" data-slide-to="0" class="active"></li>
                         <li data-target="#references-main-carousel" data-slide-to="1"></li>
