Improved scroll teaser

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             <h1 class="section-header-sub-title">Front-end Developer</h1>
             <p class="intro-message">
                 Welcome!
-                <br/>I'm Pavel, a London based web developer with 17 years of experience.
+                <br/>I'm a London based web developer with 17 years of commercial experience.
                 <br/>I love to code cool features in JavaScript and create beautiful and responsive CSS layouts.
                 <br/>I strive to write clean, modular and expressive code, which feels like poetry.
                 <br/>Give a look to my work.
@@ -543,7 +543,7 @@
                 <p class="portfolio-item-content-contribution">JavaScript, AJAX, HTML5, CSS3, XML, Samsung Web API</p>
             </div>
 
-            <div class="portfolio-item-modal-tv-timvision modal fade" id="timvision-modal" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
+            <div class="portfolio-item-modal-tv modal fade" id="timvision-modal" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="portfolio-item-modal-content">
                         <button class="portfolio-item-modal-close">X</button>
@@ -625,7 +625,7 @@
                 <p class="portfolio-item-content-contribution">JavaScript, AJAX, HTML5, CSS3, XML, Samsung Web API</p>
             </div>
 
-            <div class="portfolio-item-modal-tv-cubomusica modal fade" id="cubomusica-modal" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
+            <div class="portfolio-item-modal-tv modal fade" id="cubomusica-modal" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="portfolio-item-modal-content">
                         <button class="portfolio-item-modal-close">X</button>
@@ -719,7 +719,7 @@
                 <p class="portfolio-item-content-contribution">HTML, CSS, JavaScript, jQuery, CMS, UX/UI Design, Photoshop</p>
             </div>
 
-            <div class="portfolio-item-modal-notebook-unicri modal fade" id="unicri-modal" tabindex="-1" role="dialog" aria-labelledby="unicri-modalLabel" aria-hidden="true">
+            <div class="portfolio-item-modal-notebook modal fade" id="unicri-modal" tabindex="-1" role="dialog" aria-labelledby="unicri-modalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="portfolio-item-modal-content">
                         <button class="portfolio-item-modal-close">X</button>
@@ -846,7 +846,7 @@
                 <p class="portfolio-item-content-contribution">HTML, CSS, SASS, JavaScript, jQuery, Wordpress, Grunt, UX/UI Design, Photoshop</p>
             </div>
 
-            <div class="portfolio-item-modal-notebook-others modal fade" id="others-modal" tabindex="-1" role="dialog" aria-labelledby="others-modalLabel" aria-hidden="true">
+            <div class="portfolio-item-modal-notebook modal fade" id="others-modal" tabindex="-1" role="dialog" aria-labelledby="others-modalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="portfolio-item-modal-content">
                         <button class="portfolio-item-modal-close">X</button>
