Further optimising font styles

--- a/public/index.html
+++ b/public/index.html
@@ -965,7 +965,7 @@
             <div class="skills-group-uxui">
                 <div class="skills-list">
                     <img class="cogwheel" src="/img/portfolio/cogwheel-small.svg">
-                    <h3 class="skills-list-title">UX/UI</h3>
+                    <h3 class="skills-list-title-small">UX/UI</h3>
                     <ul>
                         <li>Photoshop</li>
                         <li>Illustrator</li>
@@ -976,7 +976,7 @@
             <div class="skills-group-tools">
                 <div class="skills-list">
                     <img class="cogwheel" src="/img/portfolio/cogwheel-small.svg">
-                    <h3 class="skills-list-title">Tools</h3>
+                    <h3 class="skills-list-title-small">Tools</h3>
                     <ul>
                         <li>Gulp</li>
                         <li>Grunt</li>
@@ -988,7 +988,7 @@
             <div class="skills-group-coding">
                 <div class="skills-list">
                     <img class="cogwheel" src="/img/portfolio/cogwheel-small.svg">
-                    <h3 class="skills-list-title">Coding</h3>
+                    <h3 class="skills-list-title-small">Coding</h3>
                     <ul>
                         <li>Object-oriented</li>
                         <li>Functional</li>
@@ -1000,7 +1000,7 @@
             <div class="skills-group-backend">
                 <div class="skills-list">
                     <img class="cogwheel" src="/img/portfolio/cogwheel-small.svg">
-                    <h3 class="skills-list-title">Back-end</h3>
+                    <h3 class="skills-list-title-small">Back-end</h3>
                     <ul>
                         <li>Wordpress</li>
                         <li>PHP (basics)</li>
@@ -1032,7 +1032,7 @@
                 <h3 class="experience-position">Senior Front-end Developer</h3>
                 <h3 class="experience-employer-name">Rocket Internet SE (startup studio in Berlin, Germany)</h3>
                 <h4 class="experience-subtitle">For 1 year I contributed to:</h4>
-                <ul class="experience-projects">
+                <ul>
                     <li>2 e-commerce websites (food delivery)</li>
                     <li>1 web app (real estate CRM)</li>
                     <li>1 marketing website (real estate)</li>
@@ -1047,7 +1047,7 @@
                 <h3 class="experience-position">Front-end Developer</h3>
                 <h3 class="experience-employer-name">Telecom Italia s.p.a. (telecommunications company in Turin, Italy)</h3>
                 <h4 class="experience-subtitle">For 3 years I contributed to:</h4>
-                <ul class="experience-projects">
+                <ul>
                     <li>4 web apps (multimedia contents streaming)</li>
                     <li>UX design and mockups</li>
                 </ul>
@@ -1062,7 +1062,7 @@
                 <h3 class="experience-position">Front-end Developer / Graphic Designer</h3>
                 <h3 class="experience-employer-name">UNICRI (United Nations agency in Turin, Italy)</h3>
                 <h4 class="experience-subtitle">For 5 year I contributed to:</h4>
-                <ul class="experience-projects">
+                <ul>
                     <li>2 e-learning portals (counter-terrorism best practices)</li>
                     <li>3 promotional websites (UN/EU international cooperation projects)</li>
                     <li>30+ print designs (brochures, posters, books, adv etc.)</li>
@@ -1078,7 +1078,7 @@
                 <h3 class="experience-position">Freelance Front-end Developer / Graphic Designer</h3>
                 <h3 class="experience-employer-name">Consulting several web agencies and clients</h3>
                 <h4 class="experience-subtitle">I created:</h4>
-                <ul class="experience-projects">
+                <ul>
                     <li>1 e-commerce website (concept store)</li>
                     <li>16 marketing websites (tourism, real estate, medical, education etc.)</li>
                     <li>20+ print designs (brochures, posters, adv etc.)</li>
@@ -1094,7 +1094,7 @@
                 <h3 class="experience-position">Web Developer / Graphic Designer</h3>
                 <h3 class="experience-employer-name">Cometa Comunicazioni s.r.l. (web agency in Turin, Italy)</h3>
                 <h4 class="experience-subtitle">For 4 year I contributed to:</h4>
-                <ul class="experience-projects">
+                <ul>
                     <li>11 e-commerce websites (forniture, pet products, orthopedic products, solar energy etc.)</li>
                     <li>7 marketing websites (restaurants, tourism, performing arts, no profit etc.)</li>
                     <li>15+ print designs (brochures, posters, adv etc.)</li>
@@ -1111,7 +1111,7 @@
                 <h3 class="experience-position">Volunteer Web Designer</h3>
                 <h3 class="experience-employer-name">Xenia Edizioni s.r.l (publishing house in Milan, Italy)</h3>
                 <h4 class="experience-subtitle">For 1 year I contributed to:</h4>
-                <ul class="experience-projects">
+                <ul>
                     <li>3 webzines (videogames)</li>
                 </ul>
             </div>
@@ -1316,6 +1316,17 @@
             <h3 class="about-interest-title-main">My hobbies</h3>
             <div class="about-interest">
                 <figure class="about-interest-image">
+                    <img class="me" src="/img/about-meditation.png">
+                </figure>
+                <div class="about-interest-content">
+                    <h3 class="about-interest-title">Meditation</h3>
+                    <p>
+                        When I started to learn Zen meditation I was absolutely stunned by the state of intense mental clarity that is possible to achieve with this practice. Since than, meditation and the Mindfulness philosophy has been incredibly useful in many areas of my life, also helping me develop a more selfless approach to my profession, reducing attachment to my own opinions and making me much more open to the ideas of others.
+                    </p>
+                </div>
+            </div>
+            <div class="about-interest">
+                <figure class="about-interest-image">
                     <img class="me" src="/img/about-salsa.png">
                 </figure>
                 <div class="about-interest-content">
@@ -1343,8 +1354,8 @@
                 <div class="about-interest-content">
                     <h3 class="about-interest-title">Photography</h3>
                     <p>
-                        Started as an experiment, turned into a hobby, photography even became my secondary profession for two years, when, besides coding, I worked on several photo projects. I tried myself with reportage, sports and dancing photography, having a lot of fun with all of them. Now I photograph only for fun, occasionally using my photo retouching skills on web projects. <br/>
-                        My photos:
+                        Started as an experiment, turned into a hobby, photography even became my secondary profession for two years, when, besides coding, I worked on several photo projects. I tried myself with reportage, sports and dancing photography, having a lot of fun with all of them. Now I photograph only for fun, occasionally using my photo retouching skills on web projects.
+                        My photos:<br/>
                         <button class="interest-button">Boxing</button>
                         <button class="interest-button">Salsa</button>
                         <button class="interest-button">Buddhist monks</button>
@@ -1358,8 +1369,8 @@
                 <div class="about-interest-content">
                     <h3 class="about-interest-title">Video</h3>
                     <p>
-                        After experimenting with photography I was naturally attracted to video. I was working in UNICRI at the time and proposed them to create a series of video clips about our projects. The results were encouraging and since experimenting with filming, montage and video effects was so much fun that, for some time, I did video editing as a side activity. Even if now I only code, sometimes I still use my understanding of video formats on web projects. <br/>
-                        My videoclips:
+                        After experimenting with photography I was naturally attracted to video. I was working in UNICRI at the time and proposed them to create a series of video clips about our projects. The results were encouraging and since experimenting with filming, montage and video effects was so much fun that, for some time, I did video editing as a side activity. Even if now I only code, sometimes I still use my understanding of video formats on web projects.
+                        My videoclips:<br/>
                         <button class="interest-button">Salsa 1</button>
                         <button class="interest-button">Salsa 2</button>
                         <button class="interest-button">UNICRI video 1</button>
@@ -1375,22 +1386,11 @@
                 <div class="about-interest-content">
                     <h3 class="about-interest-title">Graphic design</h3>
                     <p>
-                        I was eleven when I got my first computer, it was a super fast 386 PC with 2Mb of RAM, and I was totally fascinated by the most unexpected software: MS Paint! I spent countless hours with it, creating my own graphics, it was magic! Than came Photoshop, Corel Draw, and in 1998 I started my career becoming a web designer. Later I came to love coding even more, but I still open Photoshop and Illustrator quite often, when I need to work with designs on the projects.<br/>
-                        My designs:
+                        I was eleven when I got my first computer, it was a super fast 386 PC with 2Mb of RAM, and I was totally fascinated by the most unexpected software: MS Paint! I spent countless hours with it, creating my own graphics, it was magic! Than came Photoshop, Corel Draw, and in 1998 I started my career becoming a web designer. Later I came to love coding even more, but I still open Photoshop and Illustrator quite often, when I need to work with designs on the projects.
+                        My designs:<br/>
                         <button class="interest-button">Brochures</button>
                         <button class="interest-button">Posters</button>
                         <button class="interest-button">Illustrations for kids</button>
-                    </p>
-                </div>
-            </div>
-            <div class="about-interest">
-                <figure class="about-interest-image">
-                    <img class="me" src="/img/about-meditation.png">
-                </figure>
-                <div class="about-interest-content">
-                    <h3 class="about-interest-title">Meditation</h3>
-                    <p>
-                        When I started to learn Zen meditation I was absolutely stunned by the state of intense mental clarity that is possible to achieve with this practice. Since than, meditation and the Mindfulness philosophy has been incredibly useful in many areas of my life, also helping me develop a more selfless approach to my profession, reducing attachment to my own opinions and making me much more open to the ideas of others.
                     </p>
                 </div>
             </div>
@@ -1412,15 +1412,24 @@
         </header>
         <div class="article-body">
             <h3 class="contact-title">May I help you?</h3>
-            <p>
+            <p class="contact-content">
                 <br/>I would be happy to design and build your next, amazing web project.
                 <br/>I'm currently available for hire.
             </p>
             <h3 class="contact-title">Contact me</h3>
             <div class="contact-methods">
-                <a class="contact-method" href="mailto:pavel@maximov.it" target="_blank">pavel@maximov.it</a>
-                <a class="contact-method" href="tel:00447887664218" target="_blank">+44 7887 66 4218</a>
-                <a class="contact-method" href="https://de.linkedin.com/in/frontendlondon" target="_blank">LinkedIn</a>
+                <span class="contact-method">
+                    <img class="contact-method-img" src="/img/email.svg">
+                    pavel@maximov.it
+                </span>
+                <span class="contact-method">
+                    <img class="contact-method-img" src="/img/phone.svg">
+                    +44 7887 66 4218
+                </span>
+                <span class="contact-method">
+                    <img class="contact-method-img" src="/img/linkedin.svg">
+                    <a class="contact-method-link" href="https://de.linkedin.com/in/frontendlondon" target="_blank">LinkedIn</a>
+                </span>
             </div>
         </div>
     </section>
@@ -1437,11 +1446,7 @@
                 <br/><a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
             </nav>
         </header>
-        <video class="intro-video" height="100%" width="100%" autoplay loop>
-            <source src="/video/introB.mp4"  type="video/mp4">
-        </video>
     </section>
-
 </main>
 
 <script src="/js/jquery.min.js"></script>
